# pourtocol

./: .gitignore  README.md  index.html
backend/: app.py  config.py  database.py  esp32.py  pyproject.toml  routes.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: activity-log.tsx  leaderboard.tsx  status-card.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/hooks/: use-leaderboard.ts  use-status.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/types/: api.ts
