[project]
name = "aztec-pour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by line-length)
    "COM812", # missing trailing comma (handled by formatter)
    "D203",   # no blank line before class docstrings
    "D212",   # keep summary on first line
    "D413",   # blank line after last docs section
    "D1",     # ignore all "missing docstring" rules
    "TD",     # ignore all TODO rules
    "FIX002", # line contains TODO
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
